[gd_scene load_steps=2 format=3 uid="uid://ejespp135kqf"]

[ext_resource type="Script" path="res://Scenes/HoverMenu/Code/hoverMenu.gd" id="1_iurnm"]

[node name="HoverMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1670.0
offset_bottom = -755.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iurnm")

[node name="NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(180, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 30.0
offset_right = 90.0
offset_bottom = 53.0
grow_horizontal = 2
text = "ATTACK NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoBox" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -93.5
offset_right = 90.0
offset_bottom = 136.5
grow_horizontal = 2
grow_vertical = 2

[node name="RangeLabel" type="Label" parent="InfoBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -27.0
offset_top = 20.0
offset_right = 27.0
offset_bottom = 43.0
grow_horizontal = 2
text = "RANGE"

[node name="RangeIndicatorContainer" type="HBoxContainer" parent="InfoBox"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.217
anchor_right = 1.0
anchor_bottom = 0.391
offset_top = 0.0899963
offset_bottom = 0.0699921
grow_horizontal = 2
theme_override_constants/separation = 10
alignment = 1

[node name="FarRect" type="ColorRect" parent="InfoBox/RangeIndicatorContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MediumRect" type="ColorRect" parent="InfoBox/RangeIndicatorContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseRect" type="ColorRect" parent="InfoBox/RangeIndicatorContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AttackStatsGrid" type="GridContainer" parent="InfoBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -110.0
offset_right = 90.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
columns = 2

[node name="CooldownLabel" type="Label" parent="InfoBox/AttackStatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "COOLDOWN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownAmountLabel" type="Label" parent="InfoBox/AttackStatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaknessLabel" type="Label" parent="InfoBox/AttackStatsGrid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "WEAK TO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaknessValueLabel" type="Label" parent="InfoBox/AttackStatsGrid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "MEDIUM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageLabel" type="Label" parent="InfoBox/AttackStatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "DAMAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageAmountLabel" type="Label" parent="InfoBox/AttackStatsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "20"
horizontal_alignment = 1

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
